// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loading should render correctly 1`] = `
<span>
  <style
    jsx={true}
  >
    <type
      0="p"
      1="r"
      2="o"
      3="p"
      4="s"
      key="key"
    >
      rendered
    </type>
  </style>
  <span
    className="loading__item"
  >
    .
  </span>
  <span
    className="loading__item"
  >
    .
  </span>
  <span
    className="loading__item"
  >
    .
  </span>
</span>
`;

exports[`Loading should render correctly without dataAvailable 1`] = `
<span>
  <style
    jsx={true}
  >
    <type
      0="p"
      1="r"
      2="o"
      3="p"
      4="s"
      key="key"
    >
      rendered
    </type>
  </style>
  <span
    className="loading__invalid"
  />
</span>
`;

exports[`Loading should render correctly without loading 1`] = `
<span>
  <style
    jsx={true}
  >
    <type
      0="p"
      1="r"
      2="o"
      3="p"
      4="s"
      key="key"
    >
      rendered
    </type>
  </style>
</span>
`;
